fixed issue with projects container not wrapping

--- a/styles.css
+++ b/styles.css
@@ -1,14 +1,25 @@
 * {
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
     list-style-type: none;
 }
 
 body {
+    max-width: 100vw;
+    min-height: 100vh;
     display: flex;
     flex-direction: column;
-    gap: 75px;
+    gap: 75px 20px;
     overflow-x: hidden;
+}
+
+h2 {
+    font-size: 30px;
+}
+
+p {
+    font-size: 18px;
 }
 
 .links {
@@ -34,10 +45,14 @@ body {
 }
 
 main {
+    position: relative;
+    left: 50%;
+    transform: translateX(-50%);
     display: flex;
     flex-direction: column;
     gap: 100px;
     padding: 50px;
+    max-width: 1100px;
 }
 
 header {
@@ -105,6 +120,14 @@ header {
 
 footer {
     background-color: rgb(96, 96, 233);
+    display: flex;
+    justify-content: center;
+    
+}
+
+footer > div {
+    flex: 1;
+    max-width: 1100px;
     padding: 50px;
     display: flex;
     justify-content: space-between;
